# rsc

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  RSC-CMakeConfig.cmake.in  RSCBuildTreeSettings.cmake.in  RSCConfig.cmake.in  RSCConfigVersion.cmake.in
cmake/: CMakeLists.txt
cmake/Modules/: CMakeLists.txt  EnableCoverageReport.cmake
cmake/Toolchains/: CMakeLists.txt
cpack/: CPackDebianConfig.cmake
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/rsc/config/: CollectingOptionHandler.cpp  ConfigFileSource.cpp  ConfigSource.cpp  Configuration.cpp  Environment.cpp  OptionHandler.cpp  PropertyHandler.cpp  Utility.cpp
src/rsc/debug/: DebugTools.cpp  WindowsDebugTools.cpp
src/rsc/logging/: ConsoleLogger.cpp  ConsoleLogger.h  ConsoleLoggingSystem.cpp  ConsoleLoggingSystem.h  LoggerFactory.cpp  LoggerFactory.h  LoggingSystem.h  LoggingSystemFactory.cpp  LoggingSystemFactory.h  OptionBasedConfigurator.h  SGRConsoleLogger.cpp  SGRConsoleLogger.h
src/rsc/misc/: PosixSignalWaiter.cpp  langutils.cpp
src/rsc/os/: Win32HostInfo.cpp
src/rsc/plugins/: Configurator.cpp  Manager.cpp  Plugin.cpp  Plugin.h
src/rsc/runtime/: Properties.h
src/rsc/threading/: Future.h  SynchronizedQueue.h
test/: CMakeLists.txt
test/rsc/logging/: LoggerFactoryTest.cpp  OptionBasedConfiguratorTest.cpp  mocks.h
test/rsc/plugins/: ConfiguratorTest.cpp
